# dfine-xlarge-coco

./: MAKE87.yml  pyproject.toml
app/: main.py
app/hf/: config.json  model.onnx  preprocessor_config.json
